--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is a sample client created for use during Hack4DK 2016. It uses a test version of the Open Platform as a datasource.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack -p"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/DBCDK/dbc-hack4dk-client/issues"
   },
-  "homepage": "https://github.com/DBCDK/dbc-hack4dk-client#readme"
+  "homepage": "https://github.com/DBCDK/dbc-hack4dk-client#readme",
+  "dependencies": {
+    "superagent": "^2.2.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "webpack": "^2.1.0-beta.25"
+  }
 }
